[package]
name = "amo-sign"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }
